# flag-explorer

./: config.yaml
backend/: .env  app.py  controllers.py  countries.json  countries_data.json  data_access.py  entities.py  pyproject.toml  requirements.txt  run.py  services.py  setup.py  test_app.py  wsgi.py
backend/src/country_api/: app.py  controllers.py  data_access.py  services.py
backend/src/country_api/controllers/: controller.py
backend/src/country_api/models/: data_access.py
backend/src/country_api/services/: entity.py  service.py
backend/tests/: conftest.py  test_app.py  test_controllers.py  test_data_access.py  test_integration.py  test_services.py
fronend/: package-lock.json  package.json
fronend/src/: App.css  App.js  Detail.js  Home.js
fronend/src/tests/: Home.test.js
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js  Detail.js  Home.js
frontend/src/tests/: App.test.js  Detail.test.js  Home.test.js
